Update and rename 111.txt to 111.md

--- a/111.md
+++ b/111.md
@@ -1,4 +1,10 @@
-# 201007 
+# 201007 １−４
+
+车站前的商店都很兴旺。
+　びんしょう敏捷(敏捷，灵活)
+　びんじょう便乗(就便搭乘，乘机)
+　はんしょう反照(反照，反光)
+　はんじょう繁盛(繁荣，兴旺)
 
 
 せいやく制約(限制，制约)
@@ -116,21 +122,74 @@
 
 
 
+さっき、上司にいやみを言われた。
+正解：(4)
+　刚才，被上司挖苦了一頓。嫌味(いやみ)：挖苦，刺激人的话
+　不満(ふまん)：不满
+　冗談(じょうだん)：开玩笑
+　愚痴(ぐち)：牢骚，抱怨
+　皮肉(ひにく)：讽刺，挖苦
+
+20
+密集
+1.この地区(ちく)は古い住宅(じゅうたく)が密集している。
+2.毎週水曜日に会議のメンバ-を募集している。
+3.このコンサ-トには世界中から有名な歌手が集中(しゅうちゅう)している。
+4.趣味で外国の切手を収集(しゅうしゅう)している。
+
+正解：(1)
+　密集(みっしゅう)(密集，稠密)
+　(1)这个地区的老房子很密集。
+　(2)应该用：募集(ぼしゅう)している。募集，征集，招募。
+　(3)应该用：集中(しゅうちゅう)：集中
+　(4)应该用：収集(しゅうしゅう)している。：收集，收集品。
+
+
+潔い
+1.間達ったことをしたと思うなら、潔く謝ったほうがいいよ
+2.裁判で、被告は「自分は無実だ、潔白」と主張した。
+3.資料は配らずに、要点を簡潔に説明だけですませた。
+4.家に帰ったら、清潔なるまでしっかり手を洗いましょう。
+正解：(1)
+　潔い(いさぎよい)(干脆，痛快)
+　(1)如果做了错事，痛痛快快地道歉就好。
+　(2)应该用：潔白(けっぱく)：清白，无辜；洁白，雪白
+　(3)应该用：簡潔(かんけつ)：简洁，简明扼要
+　(4)应该用：清潔(せいけつ)：清洁，干净；(人品，行为等)公正。廉洁
 
 
 
+1.この機械はひとたび動かすと　すくには止められない。
+这个机器一旦启动就停不下来。
+2.政府が発表した経済対策は、一時的しか効果がなかった。
+政府公布的经济对策，只有暂时的效果。
+3.ご飯を食べてしばらくたってから、薬を飲んでください
+吃完饭过一会儿，再吃药。
+4.今日の作業はひとまずこれで終わりにしよう
+
+正解：(4)
+　ひとまず(暂且，姑且)
+　(1)应该用：ひとたび：一次，一回。
+　(2)应该用：一時的(いちじてき)
+　(3)应该用：しばらく：暂时，不久。许久，很久
+　(4)今天的工作暂且到这里结束吧。
 
 
 
-
-
-
-
-
-
-
-
-
+満喫25
+1.この音楽を聞くと、気持ちがとてもよくなる
+2.この雑誌には、安いアパ-トの情報が満載されている。
+3.海外旅行に行って、久しぶりの休暇を満喫した。
+4.これらの条件を满足する人材を探しています。
+回顧:
+上一次的选择: 3
+解析:
+正解:(3)
+満喫(まんきつ)(饱尝，充分享受）
+(1)应该用:よくなる　变好。
+(2)应该用:満載(まんさい)されている。被刊登满:满载，装满。
+(3)去海外旅行，充分享受了久违的休假。
+(4)应该用:满足(まんぞ<)する:满足，心满意足。
 
 
 
