--- a/111.md
+++ b/111.md
@@ -189,26 +189,166 @@
 (1)应该用:よくなる　变好。
 (2)应该用:満載(まんさい)されている。被刊登满:满载，装满。
 (3)去海外旅行，充分享受了久违的休假。
-(4)应该用:满足(まんぞ<)する:满足，心满意足。
+(4)应该用:满足(まんぞく)する:满足，心满意足。
 
 
 
 
 
+# 2010 12 1-4
+
+ほんすじ 本筋(中心，本题，主要情节)
+ほんきん 本金(本金；纯金)
+
+朋友拜托我弹钢琴伴奏。
+　(1)はんそう搬送(搬送，传送)
+　(2)ばんそう伴奏(伴奏)
+　(3)はんそ反訴(反诉，反告)
+ 
+名探偵の推理で事件は無事に解決した。
+　(1)しんり真理(真理)
+　(2)すいり推理(推理)
+　(3)どうり道理(道理；理所当然)
+　(4)ろんり論理(逻辑；道理)
+
+ １きわめて(極めて)(极其，非常)
+　2あらためて(改めて)(另外；重新)
+　3つとめて(努めて)(尽力地，竭力地)
+　4つきつめて(突き詰める)(反复考虑；穷根究底)
+
+
+もう少しアイディアを練ってからお話しします。
+1.けずっで
+2.つのっで
+3.ほって
+4.ねって
+解析:
+正解:(4)
+我再推敲一下我的想法之后再作说明。
+(1)けずって削る(削减。除掉。)
+(2)つのって募る(激化;募集)
+(3)ほって掘る(挖掘)
+(4)ねって練る(推敲;锻炼)
+
+
+  (1)からめた絡める(使……缠上；关连着)
+　(2)ゆるめた緩める(放松，放宽)
+　(3)はめた嵌める(嵌，插入)
+　(4)しめた締める(系紧，勒紧)
 
 
 
+各国的电视都报道了那则新闻。
+　(1)投じた(とうじた)：扔，投身
+　(2)配送した(はいそうした)：发送
+　(3)報じた(ほうじた)：报道；报答例：外電の報じるところによれば/据外电报道
+　(4)配布した(はいふした)：散发
+
+
+(1)ベテラン：老手，老资格
+　(2)ポジション：地位，职位
+　(3)ステータス：社会地位，身份
+　(4)キャリア：career经历，经验例：画家として長いキャリアを持つ人/作为一个画家拥有长期经历的人
+
+
+この小説の主人公は、歷史(上 )の人物をモデルにしている，
+1.上
+2.面
+3.側
+4.内
+解析:
+正解:(1)
+这部小说的主人公是以历史上的人物为原型的。
+(1)上(じょう):在……上，关于… 例:仕事上のつきあい 付き合い/工作上的来往。
+(2)面(めん):方面，方向 例:制度せいど　面の準備/制度机制上的准备。
+(3)側(がわ):周围;一侧;方面，立场 例:企業側の要請　ようせい/企业方面的要求
+(4)内(ない):之内;…中 例:サイト内の検索/站内检索。
 
 
 
+交涉が(円滑に )進み、無事に契約することができた。
+1.しとやかに
+2.しなやかに
+3.円滑に
+4.性急に
+解析:
+正解:(3)谈判顺利进行，成功签订了契约。
+(1)しとやかに:淑やかに　端庄，高雅
+(2)しなやかに:灵活;柔软
+(3)円滑に(えんかつに):顺利 例:会議は円滑にとり行われた。/会议顺利地举行了。
+(4)性急に(せいきゆうに):性急，急性(子)，急躁。(気が短いこと。せっかちなこと。)
 
 
 
+次の大会に向けて、チームの(結束)を強めよう。
+为了下次的大会我们要加强团队的团结。
+　(1)収束(しゅうそく)：结束，平息
+　(2)結束(けっそく)：团结例：従業員の結束が固い。/员工间非常团结。
+　(3)親密(しんみつ)：亲密
+　(4)緊密(きんみつ)：紧密；关系密切
 
 
 
+14)今回の研修会は、出席者がまばらだった
+1.多かった
+2.少なかった
+3.まじめだった
+4.ふまじめだった
+解析:
+正解:(2)
+这次进修会出席人数很少疎ら(まばら):稀，稀疏
+(1)多かった(おおかった):多的
+(2)少なかった(すくなかった):少的，不多的
+(3)まじめ龙っ龙:认真，踏实
+(4)ふまじめ龙った:不认真
 
 
+16
+父は每朝、丹念（たんねん）に新聞に目を通す
+1.ばうっと
+2.ちらっと
+3.じっくりと
+4.さっと
+解析:
+正解:(3)父亲每天早上都很仔细的浏览报紙、丹念に(たんねんに):细心，仔细状
+(1)ほうっと:精神恍惚;模糊状
+(2)ちらっと:-瞬间瞥见状，偶尔一晃地看见状
+(3)じっくりと:踏踏实实地，，仔细认真地。
+(4)さっと:粗略地，简单地
+
+
+捗る　はかどる
+工事がなかなかはかどらない。
+今月は作業がずいぶんはかどった。
+这个月的工作进展飞快。
+
+
+18
+検討（けんとう　の結果（けっか、この計画（けいかくは見合わせることになりました,
+1.承認する
+2.実施する
+3.変更する
+4.中止する
+解析:
+正解:(4)讨论的结果，决定中止这项计划，見合わせる(みあわせる):中止，推迟，暂缓
+(1)承認する(しょうにんする):承认;批准
+(2)実施する(じっしする):实施
+(3)変更する(へんこうする):变更，更改
+(4)中止する(ちゆうしする):中止，中途停止
+
+
+激しい雨のため、**やむをえず**試合は延期することになった
+19
+1.しかたなく
+2.まもなく
+3.思いがけなく
+4. 限りなく
+解析:
+正解:(1)因为下暴雨，不得已而决定比赛延期。やむをえず:不得以，没办法
+(1)しかたなく:没办法，不得以
+(2)まもなく:一会儿，不久
+(3)思いがけなく(おもいがけなく):意想不到
+(4)限りなく(かぎりなく):无限地;无比的
 
 
 
