--- a/111.md
+++ b/111.md
@@ -350,8 +350,41 @@
 (3)思いがけなく(おもいがけなく):意想不到
 (4)限りなく(かぎりなく):无限地;无比的
 
+3.美術品の運搬には、細心の注意を払う必要がある。
+細心(さいしん)：细心，周密。
+    (1)应该用：心細い：缺乏自信而感到胆怯
+    (２)应该用：細かい:细节的
+　(4)应该用：詳(くわ)しい：详细的，详密的；熟悉的，精通的。
 
 
+22. 意地
+1.彼は何がやりたいのか、意図/目的(いと/もくてき)がはっきりしない。
+2.そう意地を張らずに、素直に謝ったほうがいいよ。 素直 坦率，直率，老实；纯朴，天真，不隐
+意地を張らずに いじをはらずに不要意气用事
+固执，倔强，意气用事『成』，矫情
+
+3.会議で、この調査の趣旨を説明した。  旨 むね　　意思，要点，大意，趣旨　　
+4.わが社は顧客の要求/要望/ニーズに沿った商品開発を目指している
+
+　解析：意地(いじ)：固执，倔強；意气用事
+　(1)应该用：意図/目的(いと/もくてき)：意图，打算；/目的，目标。
+　(2)不要那样赌气，还是坦率道歉比较好。
+　(3)应该用：趣旨(しゅし)：宗旨。
+　(4)应该用：要求/要望/ニーズ(ようきゅう/ようぼう)：要求/希望，强烈希望/需求
+
+ 25. 見落とす
+1.人が困っているのを見過ごすわけにはいかない。　置之不理 视而不见 
+2.飛行機に乗っている間、窓からずっと海を見下ろすとしていた。俯视 向下看 
+3.部長は、気づいていたようだが、今回の失敗を見逃すとしてくれた。 放任 
+4.メールが多すぎて、重要な連絡を見落とすとしていた。 看漏了 
+
+正解：(4)
+　解析：見落とす(みおとす)：看漏，忽略
+　(1)应该用：見過(みす)ごす：置之不问；看漏
+　(2)应该用：見下(みお)ろして：往下看，俯视；蔑视，小看
+　(3)应该用：見逃(みのが)して：看漏，视而不见；放任，宽恕
+　(4)由于邮件太多，把重要的通知给看漏了。
+　
 
 
 
