--- a/111.md
+++ b/111.md
@@ -386,5 +386,62 @@
 　(4)由于邮件太多，把重要的通知给看漏了。
 　
 
+# 2011 07  1-4 
+1. 去年より利益がわずかに増えた。
+
+　解析：比起去年，收益增长甚微。
+　(1)りし　利子(利息)
+　(2)りそく　利息(利息)
+　(3)りえき　利益(收益)
+　(4)りじゅん　利潤(利润)
+ 
+何とかなるだろう　想办法，设法；勉强；好歹；总算
+总会有办法。
+なんとか　
+何とか間にあいます
+勉强凑合。
+
+2. 橋本選手の活躍で、なんとかピンチを逃れた。
+3. pinch紧急关头；危机，困境，危急局面
+　正解：(1)
+　解析：多亏了桥本选手的积极作用，总算摆脱了困境。
+　(1)のがれた逃れた(逃跑，摆脱)
+　(2)はなれた離れた(离开，分开)
+　(3)それた逸れた(偏离)  例：的を/から逸れる。
+　(4)まぬがれた免れた(免得，避免)　免れる　
+
+3. 子どものおもちゃは、安全性を考慮して選ぶようにしている。
+　解析：在选择儿童玩具的时候，应该考虑其安全性。
+　(1)こうろ高炉(高炉)/航路(航道)
+　(2)こうりょ考慮(考虑)
+　(3)こうろう功労(功劳，功绩)
+　(4)こうりょう衡量(考虑，衡量，斟酌)
+
+
+(1)さまたげる　　妨げる(妨碍，阻碍)
+　(2)さえぎる　　遮る(遮挡，阻挡)
+　(3)せばめる　　狭める(縮小缩短)
+　(4)へだてる　　隔てる(分隔，隔断)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
