--- a/111.md
+++ b/111.md
@@ -423,6 +423,206 @@
 　(3)せばめる　　狭める(縮小缩短)
 　(4)へだてる　　隔てる(分隔，隔断)
 
+事実を根拠とする。
+以事实为根据。
+こんきょ根拠(根据)
+
+
+
+7. 物置の隅で、埃ほこり（まみれ）になっている古い人形を見つけた。
+1.ぐるみ
+2.がらみ
+3.まみれ
+4.ずくめ
+解析：我在库房的角落里发现了一个沾满灰尘的人偶。
+　(1)ぐるみ：　包括……的，……范围内的……
+　(2)がらみ：　大约；与……有关的；与……一起
+　(3)まみれ：　一面沾满……
+　(4)ずくめ：　尽くめ　全身……全都是……
+
+8. 木村さんとは共通の趣味があるので、いつも会話が （）  。
+1.舞う
+2.弾む
+3.転がる
+4.跳ねる
+正解：(2)
+　解析：因为与木村有相同的爱好，所以总是聊得很愉快。
+　(1)舞う：飞舞，舞蹈
+　(2)弾む：弹起；起劲儿、愉快
+　(3)転がる：滚，滚动；普遍，不稀奇
+　(4)跳ねる：跳跃
+
+
+10. その選手は、十年に一人の（）だと言われている。
+正解：(4)
+　解析：大家都说那个选手是十年一遇的杰出人才。
+　(1)玄人：老手，专家
+　(2)大家：大师，大家
+　(3)巨匠：大师，巨匠
+　(4)逸材：卓越的人才
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
