--- a/111.md
+++ b/111.md
@@ -456,39 +456,154 @@
 10. その選手は、十年に一人の（）だと言われている。
 正解：(4)
 　解析：大家都说那个选手是十年一遇的杰出人才。
-　(1)玄人：老手，专家
-　(2)大家：大师，大家
-　(3)巨匠：大师，巨匠
-　(4)逸材：卓越的人才
+　(1)玄人くろうと：老手，专家
+　(2)大家たいか：大师，大家
+　(3)巨匠きょしょう：大师，巨匠
+　(4)逸材いつざい：卓越的人才
+
+
+12. 約３００年前の絵画の （修復） が終わり、来月から公開される予定だ。
+1.回復
+2.修復
+3.復旧
+4.復興
+正解：(2)
+　解析：约300年前的画已经修复完，计划下个月公开。
+　(1)回復：康复，恢复
+　(2)修復：修补，修复
+　(3)復旧：(一般指工程的)修复
+　(4)復興：复兴
+
+
+この映画は画期的な手法で製作された。划期的
+1.広く知られている
+2.最近ではめずらしい
+3.非常に時間がかかる
+4.今までになく新しい
+正解：(4)
+　解析：这部影片制作使用了划时代的全新手法。
+　画期的な：划时代的，全新的
+　(1)広く知られている：广为人知的
+　(2)最近ではめずらしい：最近比较新奇的
+　(3)非常に時間がかかる：很费时间的
+　(4)今までになく新しい：至今还没有的，全新的
+
+ 
+16. 問題を解決するために、もう少し手がかりが欲しい。
+1.イメージ
+2.サポート
+3.チャンス
+4.ヒント
+　正解：(4)
+　解析：为了解决问题，还需要一些线索。
+　手がかり：线索
+　(1)イメージ：图，印象
+　(2)サポート：支持
+　(3)チャンス：机会
+　(4)ヒント：线索，提示
+
+17. あの人の話はにわかには信じられない。
+1.すぐには
+2.完全には
+3.すなおには
+4.簡単には
+正解：(1)
+　解析：他的话，让人一时难以置信。
+　にわかには：立即　俄かに
+　(1)すぐには：很快，立即
+　(2)完全には：完全地
+　(3)すなおには：老实地　素直に
+　(4)簡単には：简单地
+
+
+18. この鍋は重宝している。
+1.以前より値上がりしている
+2.形が気に入っている
+3.評価が高まっている
+4.便利で役に立っている
+　正解：(4)
+　解析：这个锅用起来很方便。
+　重宝している：方便，实用
+　(1)以前より値上がりしている：涨价了
+　(2)形が気に入っている：很中意其形状
+　(3)評価が高まっている：评价提高了
+　(4)便利で役に立っている：方便有用
 
 
 
 
+19. 中村さんは仕事に対していつもシビアだ。
+　解析：中村对工作一直都是一丝不苟。
+　シビア：严格，认真
+　(1)弱気だ：胆怯
+　(2)厳しい：严厉，严格
+　(3)柔軟だ：灵活，可通融；柔软
+　(4)注意深い：仔細，谨慎，细心
+
+連携
+1.学校は地域と連携して生徒の安全を守っている。
+2.複数の社員で一台のプリンターを共同して使っている。
+3.最近の株価は、為替レートと連動して上下している。
+4.登山のときには、必ず地図を持ってください。
+正解：(1)
+　解析：連携(れんけい)：联合，合作，协作。
+　(1)学校与地区联手保证学生的安全。
+　(2)应该用：共同(きょうどう)で：共同地
+　(3)应该用：連動(れんどう)：联动，连锁，开动某一部分后，其他部分也跟着运转。
+　(4)应该用：持って(もって)：持，拿；捏住
+
+不服
+1.彼の失礼な態度は、そこにいた人々の不満を買った。
+2.カラオケで思い切り歌って、日ごろの憂さを晴らそう。
+3.審判の判定に不服を唱えることはできない。
+4.この部署で、お客様からの苦情を受け付けています。
+　正解：(3)
+　解析：不服(ふふく)：不服从，不顺从。
+　(1)应该用：不満(ふまん)：不满，认为没有得到充分满足
+　(2)应该用：憂さ(うさ)：忧愁，烦恼；解闷，消愁
+　(3)对于审判的决定不能不服。
+　(4)应该用：苦情(くじょう)：不平，抱怨，牢骚
+
+かなう
+1.苦労がかない、彼は俳優として成功をおさめた。
+2.天気予報がかない、今日は一日中快晴だった。
+3.準備を重ねてきたイベントが無事かなった。
+4.自分の店を持つという夢が、とうとうかなった。
+正解：(4)
+　解析：かなう：实现(愿望)。达到(目的)。做到，完成。
+　(1)应该用：報われ：报，报应，报偿，报答
+　(2)应该用：当たり：中，猜中，命中
+　(3)应该用：終了(しゅうりょう)した：学完，修完。
+　(4)想拥有一家店的梦想终于实现了。
 
 
+23. 目覚ましい
+1.あの新人選手は目覚ましい成長を見せている。
+2.上の階で恐(おそろ)しいほどの大きな物音がした。
+3.この赤はとても鮮(あざ)やかな色で人目をひくね。
+4.夕べ早く寝たので、今朝はとてもすっきりしている。
+　正解：(1)
+　解析：目覚(めざま)しい：惊人的，异常的；非常了不起的。
+　(1)那个新选手表现出了显著的进步。
+　(2)应该用：恐(おそろ)しい：吓人的，害怕的，令人恐惧的；可怕，惊人
+　(3)应该用：鮮(あざ)やかな：鲜艳的，鮮明
+　(4)应该用：すっきりしている：舒畅，舒快，轻松；洗练，清秀。没有多余的烦恼。
 
 
+ ほどける
+1.ねじ 螺丝がほどけて、いすがぐらぐらしている。摇晃，摆动，不稳定
+2.靴のひもがほどけないようにしっかりと結んだ。
+3.シャツのボタンがほどけているから、とめた方がいいよ。
+4.グラスに浮かぶ氷がみるみるうちにほどけた。
+正解：(2)
+　解析：ほどける：解开，松开  解ける
+　(1)应该用：緩(ゆる)んで：松，松弛；缓和；精神懈怠
+　(2)把鞋带系紧，不要让它松开来。
+　(3)应该用：はずれて：脱落，掉下；未中，偏离
+　(4)应该用：溶(と)けた：溶解，溶化，溶于。
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+# 2011 12 1-4
 
 
 
