--- a/111.md
+++ b/111.md
@@ -606,50 +606,197 @@
 # 2011 12 1-4
 
 
+1. 時間がたつにつれて、選手の動きが鈍ってきた。
+1.にぶって
+2.とどこおって
+3.おとって
+4.ちぢまって
+正解：(1)
+　解析：随着(比赛)时间的增长，选手的动作也变迟钝了。
+　(1)にぶって鈍って　にぶる　(变钝，变得迟钝)
+　(2)とどこおって滞って　滞る　とどこおる(拖延，拖欠)
+　(3)おとって劣って(不及；不如；次)
+　(4)ちぢまって縮まって(缩小，缩短)
+
+2. 高校生のころ、「将来は海外で働きたい」と漠然と考えていた。
+1.まくぜん
+2.ばくぜん
+3.もうぜん
+4.ぼうぜん
+正解：(2)
+　解析：髙中的时候，漠然地想着“将来想去海外工作”。
+　(1)まくぜん干扰项，不存在
+　(2)ばくぜん漠然(漠然，含混，模糊)
+　(3)もうぜん猛然(猛然)
+　(4)ぼうぜん呆然(愕然，发愣)茫然(茫茫)
+
+
+弊社は今回の合併を機に社名を変更します。
+(2)ごうべん合弁(合办，合资)
+　(3)がっぺい合併(合并；企业合并)
+
+6. ようやく景気回復の兆しが見えてきた。
+しるし印(记号，标记)
+　(2)あかし証(证据)
+　(3)きざし兆し(兆头，预兆)
+　(4)ひざし日差し(阳光)
+
+. 大学をやめると言ったら、母に         猛       反対された。
+
+
+8. そんな軽装で冬の山に登るなんて、  無謀      だ。
+1.無残
+2.無謀
+3.無実
+4.無念
+正解：(2)
+　解析：穿那么少居然要爬冬天的山，真是太乱来了。
+　(1)無残むざん(残忍，残酷；可怜，凄惨)
+　(2)無謀むぼう(轻率，乱来，鲁莽)
+　(3)無実むじつ(没有根据；冤枉)
+　(4)無念むねん(懊悔，遗憾)
+
+9. 今回の作品は、彼にとって  3.会心    の出来と言えるだろう。
+1.核心
+2.真心
+3.会心
+4.気心
+正解：(3)
+　解析：这次的作品对他来说可以说是得意之作吧。
+　(1)核心かくしん(果核；核心，要害)
+　(2)真心まごころ(真心，诚心，诚意)
+　(3)会心かいしん(满意，得意，如愿以偿)如「会心の作」，得意之作。
+　(4)気心きごころ(心情；气质；脾气)
+
+
+10. この言葉には、やや批判的な 　(4)インスピレーション灵感   が含まれている。
+1.センス
+2.キャラクター
+3.ニュアンス
+4.インスピレーション
+　正解：(3)
+　解析：这些话里稍微包含着一些批判的意味。
+　(1)センス感觉，审美能力，美感
+　(2)キャラクター性格，性质
+　(3)ニュアンス语气，语感；微妙差别　nuance 感情等的微妙差异
+　(4)インスピレーション灵感　inspiration
+
+
+この辺りは、高速道路と鉄道が  並行へいこう  して走っている。
+1.同調
+2.並列
+3.同伴
+4.並行
+(1)同調どうちょう(同样的调子；同一步调，赞同)
+　(2)並列へいれつ(并列，并排)
+　(3)同伴どうはん(同伴，偕同)
+　(4)並行へいこう(并行；同时举行)
+
+
+12. この文章は新聞記事からの    抜粋    です｡
+1.抽選
+2.摘出
+3.採取
+4.抜粋
+　正解：(4)
+　解析：这个文章是新闻摘要。
+　(1)抽選ちゅうせん(抽签)
+　(2)摘出てきしゅつ(指出,揭发(坏事)；挖出)
+　(3)採取さいしゅ(采集选取)
+　(4)抜粋ばっすい(摘要；摘要选拔)
+
+コピー用紙の    3.ストック     が減ったら、注文しておいてください。
+1.キープ
+2.チャージ
+3.ストック
+4.シェア
+正解：(3)
+　解析：打印纸的库存要是减少的话，请提前订货。
+　(1)キープ保持；保护
+　(2)チャージ冲撞；充电
+　(3)ストック储存，库存
+　(4)シェア市场占有率；市场份额
+
+
+14. 今日の会議で出た意見は、ありきたりのものが多かった。
+ありきたり　有り来たり
+正解：(2)
+　解析：今天在会议上提出的意见，没有新意的居多。
+　ありきたり：以前就有的；不稀奇的
+　(1)的確(てきかく)：确切；确实；非常合适
+　(2)平凡(へいぼん)：平凡，普通
+　(3)積極的(せっきょくてき)：积极的
+　(4)否定的(ひていてき)：否定的
 
 
 
+正解：(4)
+　歴然(れきぜん)：历历；清清楚楚；明明白白
+　(1)以前と変わらない：和以前一样
+　(2)ほとんどない：几乎没有
+　(3)以前より大きくなっている：比以前大了
+　(4)はっきりしている：清晰
+
+極力(きょくりょく)：极力；尽可能；尽量
+　(1)少(すこ)しずつ：一点一点(地)‘
+　(2)大幅(おおはば)に：大幅度地
+　(3)できる限(かぎ)り：尽可能地
+　(4)真(ま)っ先(さき)に：最先，首先
+
+ 17. その結果を聞いて落胆した。
+1.びっくりした
+2.がっかりした
+3.動揺した
+4.疑問を持った
+
+正解：(2)
+　解析：听了结果很失望。
+　落胆(らくたん)：沮丧；失望；灰心
+　(1)びっくりした：吃惊了；吓了一跳
+　(2)がっかりした：失望了
+　(3)動揺(どうよう)した：动摇了
+　(4)疑問(ぎもん)を持(も)った：怀疑了
+
+18. あの小説の結末はあっけないものだったらしい。
+1.意外につまらない
+2.意外におもしろい
+3.予想通りつまらない
+4.予想通りおもしろい
+解：(1)
+　解析：听说那个小说的结尾很无聊。
+　あっけない：太简单的；不尽兴的；没意思的
+　(1)意外につまらない：意外地很无聊
+　(2)意外におもしろい：意外地很有趣
+　(3)予想通りつまらない：和预想的一样无聊
+　(4)予想通りおもしろい：和预想的一样有趣
 
 
 
+コントラスト　　contrast对比，对照　
 
+20. とっくに
+1.このへんには、とても大きいお寺があった。
+2.山田さんならとっくに帰りましたよ。
+3.あのときのことを今ごろ謝ってももう遅いよ。今ごろ　事到如今 
+4.さっきから電話がずっと鳴りっぱなしだ。
+正解：(2)
+　解析：とっくに：很早，己经
+　(1)应该用：とても：非常，很
+　(2)山田先生的话，早就回去啦。
+　(3)应该用：もう：己经
+　(4)应该用：ずっと：一直，总是，始終；相差很多
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ まちまち
+1.うちの家族は夕食をとる時間がみんなまちまちだ。
+2.自分用と贈り物用をまちまちに包んでもらった。
+3.この花束はまちまちな色が混ざっていてきれいだね。
+4.営業時間や定休日は、それぞれの店舗で異なります。
+　正解：(1)
+　解析：まちまち：各式各样，形形色色
+　(1)我们家吃晚饭的时间大伙儿都不一样。
+　(2)应该用：別々(べつべつ)：分別，个别，各自分开
+　(3)应该用：いろいろ：各种各样，形形色色，多样
+　(4)应该用：それぞれ：各自，各个，分別，每个
 
 
 
