--- a/111.md
+++ b/111.md
@@ -799,12 +799,42 @@
 　(4)应该用：それぞれ：各自，各个，分別，每个
 
 
+ゆとり
+1.参加者が多かったので、資料のゆとりはあと１枚だけです。
+2.子どもが生まれてからは経済的にゆとりがなくなった。
+3.レポート提出まで、あと一日だけゆとりをください。
+4.すでにかなり譲歩したので、これ以上交渉のゆとりはない。
+正解：(2)
+　解析：ゆとり：宽裕。舒畅。绰绰有余
+　(1)应该用：のこり：剩下，残余，剩余。
+　(2)孩子生下来后，经济上就没有那么充裕了。
+　(3)可以不填。
+　(4)应该用：余地(よち)：余地，宽裕；剩余部分
+
+22. ゆとり
+1.参加者が多かったので、資料ののこりはあと１枚だけです。
+2.子どもが生まれてからは経済的にゆとりがなくなった。
+3.レポート提出まで、あと一日だけください。
+4.すでにかなり譲歩したので、これ以上交渉の余地はない。
+　正解：(2)
+　解析：ゆとり：宽裕。舒畅。绰绰有余
+　(1)应该用：のこり：剩下，残余，剩余。
+　(2)孩子生下来后，经济上就没有那么充裕了。
+　(3)可以不填。
+　(4)应该用：余地(よち)：余地，宽裕；剩余部分
 
 
-
-
-
-
+配布
+1.インターネットでは、最新のニュースがすぐに配布される。
+2.携帯電話の電波は、どこにいても配布される。
+3.ご購入いただいた商品は、ご自宅まで配布いたします。
+4.あの店では今、化粧品の無料サンプルを配布している。
+正解：(4)
+　解析：配布(はいふ)：散发，分发。
+　(1)应该用：配信(はいしん)：发稿，发布信息
+　(2)应该用：着信(ちゃくしん)：来电，来信；
+　(3)应该用：配送(はいそう)：配送，发送；分发分送物品
+　(4)那个店现在正递发化妆品的免费试用装。
 
 
 
