--- a/111.md
+++ b/111.md
@@ -837,6 +837,31 @@
 　(4)那个店现在正递发化妆品的免费试用装。
 
 
+ 
+質素
+1.この文章は質素で、とてもわかりやすい。
+2.もう少し値段の質素なツアーはありませんか。
+3.経験は質素でも、やる気のある人を採用したい。
+4.無駄なものは買わずに、質素な生活を送っている。
+　解析：配布(はいふ)：散发，分发。
+　(1)应该用：配信(はいしん)：发稿，发布信息
+　(2)应该用：着信(ちゃくしん)：来电，来信；
+　(3)应该用：配送(はいそう)：配送，发送；分发分送物品
+　(4)那个店现在正递发化妆品的免费试用装。　
+
+ 見失う
+1.相手チームのわずかなすきを見失わず、点を取った。
+2.何度もチェックしたはずなのに、間違いを見失っていた。
+3.先生は、最後まで私たちを見失わずに指導してくれた。
+4.よそ見をしながら歩いていたら、友達を見失ってしまった。
+正解：(4)
+　解析：見失(みうしな)う：迷失，搞不清。
+　(1)应该用：見逃(みのが)さず：看漏，错过，放过
+　(2)应该用：見落(みお)として：看漏，看丢，漏看
+　(3)应该用：見捨(みす)てず：不弃之不顾，不抛弃；
+　(4)边走边东张西望的，结果和朋友走散了
+
+
 
 
 
