--- a/111.md
+++ b/111.md
@@ -864,43 +864,208 @@
 
 
 
+# 2012 07 1-4 
+
+
+群衆 滚修
+1. 珍しいイベントがあると聞いて、広場に群衆が押し寄せた。
+押し寄せる おしよせる涌来，涌过来 
+　正解：(4)
+　解析：听闻有罕见的活动，广场上涌来了大量的人群。
+　(1)かんしゅ看守(看守)
+　(2)かんしゅう慣習(习惯、风俗)
+慣習  习惯；习俗；老规矩；常规
+商慣習。 商业惯例〔习惯〕。
+慣習に従う。 按照旧习；遵循老规矩；按照常规。
+慣習を破る。
+(4)ぐんしゅう群衆(群众、大量的人群)
+
+正解：(2)
+　解析：发现了颠覆至今为止的学说的新事实。
+　(1)ひるがえす翻す　昼　返す　翻天 　(翻过、翻转；纵身；突然改变)  
+　(2)くつがえす覆す(颠覆) 屈　　返す　  库子卡爱死
+　(3)まどわす惑わす(迷惑)　窓　忘　  码垛瓦斯
+　(4)ゆるがす揺るがす(动摇)   雨露尬死
+
+1)きょくめい曲名(曲名)
+　(2)きょうめい共鳴(共鸣)
+　(3)こくめい克明(细致、绵密、一丝不苟)
+　(4)こうめい公明(公明、公正而无隐瞒)
+
+4. 窓を開けると、心地よい風が入ってきた。
+　解析：打开窗户，吹进来泌人心脾的风。
+ここ　ちよい　心地よい(心情舒畅的，沁人心脾的)
+
+襲撃 しゅうげき　襲撃事件　しゅうげきじけん　袭击
+敵の不意をついて攻撃すること。　不意　ふい　　不意に襲撃する。
+奇袭，偷袭。
+
+5. 新社長は、これまでの経営方針を踏襲すると述べた。
+正解：(2)
+　解析：新社长表示要延续以往的经营方针。
+　(1)とうしょう凍傷(冻伤)
+　(2)とうしゅう踏襲(延续、继承)
+　(3)としょう渡渉(跋渉)
+
+新しい政権には、医療制度の改革が期待されている。
+1.かいかく
+2.かいこく
+3.かいがく
+4.かいごく
+正解：(1)
+　解析：(民众)期待着新政府进行医疗制度的改革。
+　(1)かいかく改革(改革)
+　(2)かいこく開国(开国)
+　(3)かいがく開学(开学)
+
+
+　(1)リミットlimit限度，界限，范围，极限
+ メリット　　优点，好处，有利之点，价值
+Merit.利点。長所。
+会社合併のメリット。　嘎、呸！
+公司合并的好处。
+　(2)ブロック　block　圈子、积木；同盟
+　(3)ノルマ定额，劳动基本定额。
+ 指标，定额，劳动基本定额。词源：俄语norma
+　(4)ハードル障碍、难度、困难
+
+8. プランの    1.大筋       はすでに固まっています。
+1.大筋
+2.大幅
+3.大口
+4.大台
+正解：(1)
+　解析：计划的梗概已经确定了。
+　(1)大筋おおすじ(梗概、概略、概況)
+　(2)大幅おおはば(大幅、大幅度)
+　(3)大口おおぐち(大宗；大话)
+　(4)大台おおだい(股票专业术语；大界限)
+
+
+システムトラブルの原因を徹底てってい的に     究明きゅうめい      し、再発（さいはつ）防止（ぼうし）に取り組みたい。　　
+　正解：(1)
+　解析：要彻底查明系统问题的原因，防止问题再次发生。搭配，组合
+　(1)究明きゅうめい(研究明白，调查明白)
+　(2)釈明しゃくめい(解释，阐明)
+　(3)察知さっち(察觉到)
+　(4)探知たんち(探知、发觉)
 
 
 
+吟味　ぎんみ
+（仔细）斟酌，考虑；拣选，选择
+用語を吟味する
+斟酌用词。
+ 市役所のロビーで、アマチュア写真家による写真展が                います。
+正解：(2)
+　解析：在市政府的大厅正在举行业余摄影家的摄影展。
+　(1)施されてほどこされて(施舎；施行；施加)
+　(2)催されてもよおされて(开展、举办)
+　(3)設けられてもうけられて(设置；准备)
+　(4)挙げられてあげられて(举证；举例)
+
+15. 試合後のインタビューで、選手たちはすがすがしい表情で質問に答えていた。
+1.ほっとした
+2.興奮した
+3.さわやかな
+4.真剣な
+正解：(3)
+　解析：在比赛后的采访中，选手们以舒畅的表情回答了问题。
+　すがすがしい清々しい：清爽、舒畅
+　(1)ほっとした：放心的，放松的
+　(2)興奮した：兴奋的　こうふん
+ 　(3)さわやかな：清爽，爽快　爽やか
+　(4)真剣な：认真的
+
+密か
+ひそか　秘密；暗中；悄悄
+. 努力をすればおのずと結果に表れてくる。
+析：只要努力，自然就会有结果。
+　おのずと　自ずと　：自然地、自然而然地
+　(1)だんだん：渐渐地
+　(2)はっきり：淸楚地
+　(3)自然に：自然地
+　(4)絶対に：绝对
+
+
+20. 免除
+1.会費を２年間滞納すると、自動的に会から除名されます。
+2.３年後にもう一度試験を受けないと、この資格は無効されます。
+3.入学試験の成績優秀者は、入学金が免除になります。
+4.うがいをすれば、風邪の予防になります。
+正解：(3)
+　解析：免除(めんじょ)名•他サ一般用于免除费用，.或者免除某种义务、职责
+　(1)应该用：除名(じょめい)されます：除名，从所在籍或名簿上除去名字。
+　(2)应该用：無効(むこう)になる：无效，不生效；不见效
+　(3)入学考试成绩优秀的人，可免除入学费。
+　(4)应该用：予防(よぼう)：预防
 
 
 
+ブランク
+1.２年のブランクがあり心配だったが、先月から職場に復帰した。
+2.１５分ほど休みにしませんか。みんな疲れたようだし。
+3.プレゼンの最中は緊張しちゃって、頭が真っ白だったよ。
+4.大事なデータを削除してしまった。
+正解：(1)
+　解析：ブランク名空白、空窗期
+　(1)虽然担心自己有2年的空白期，不过还是从上个月开始回归了职场。
+　(2)应该用：休み(やすみ)：休息，休假；缺勤
+　(3)应该用：真っ白(まっしろ)：雪白，纯白
+　(4)应该用：削除(さくじょ)：删除，省略；削除
+
+ 怠る
+1.昨日、会社を怠って映画を見に行ってしまった。
+2.忙しいときは料理を怠って、買ってきた弁当で済ますこともある。
+3.彼はどんな苦労も怠らずに、いつも積極的に仕事に取り組んでいる。
+4.成功を勝ち取るためには、日々の努力を怠ってはいけない。
+正解：(4)
+　解析：怠る(おこたる)自五懈怠、怠慢
+　(1)サボって：怠エ，旷课，逃学
+　(2)应该用怠(なま)けて：懒惰，不卖力；不勤劳，懈怠
+　(3)应该用厭(いと)わず：厌烦，嫌，无聊；保重，珍重，爱护
+　(4)要取得成功，就不能懈怠平日的努力。
+
+見込み
+1.今日はこれから取引先に打ち合わせに行くつもりです。
+2.周囲の期待に応えて、すばらしい仕事を成し遂げた。
+3.田中さんは、来週には退院の見込みです。
+4.予想もしないところで昔の友人に会った。
+正解：(3)
+　解析：見込み(みこみ)名预计、希望、可能性
+　(1)应该用：つもり：打算
+　(2)应该用期待(きたい)：期待，期望；预期
+　(3)预计田中先生下周就可以出院了
+　(4)应该用予想(よそう)：预想，预料
 
 
+. 満たない
+1.私が生まれたのは、人口５００人に満たない小さな村です。
+2.会議資料が３人分足りないから、コピーしてきて。
+3.どうがんばっても、英語力では田中さんにかなわない。
+4.当店のサービスについて何か不満点があればご記入ください。
+正解：(1)
+　解析：満たない(みたない)連語不满、不足
+　(1)我出生在一个人口不满500人的小村庄。
+　(2)应该用足りない(たりない)：不够，无价值，不起作用
+　(3)应该用かなわない：敌不过，不能匹敌，不可战胜；吃不消，受不了
+　(4)应该用不満(ふまん)な：不满，不满足；发牢骚，不满意
 
 
+有数
+1.この商品は有数ですので、売り切れの場合もございます。
+2.この国は世界でも有数の小麦生産国だ。
+3.会議で反対意見を述べた人は有数のみだった。
+4.いくつもの案を比較、検討し、その中から有数の案を選んだ。
+正解：(2)
+　解析：有数(ゆうすう)：屈指可数
+　(1)应该用少数(しょうすう)：少数，数量少
+　(2)这个国家是世界上屈指可数的小麦生产国。
+　(3)应该用数人(すうにん)：好几人
+　(4)应该用いくつか：几个，一些
+ 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+# 2012 12 
 
 
 
