--- a/111.md
+++ b/111.md
@@ -1067,29 +1067,82 @@ Merit.利点。長所。
 
 # 2012 12 
 
+1. 従来の枠を超えて新しい分野に進出する企業が増えている。
+正解：(2)
+　解析：打破过去的限制，进入新的领域的企业正在增加。
+　(1)かべ壁(墙壁)
+　(2)わく枠(框，轮廓，限制范围)
+　(3)みぞ溝(水沟)
+　(4)ふち淵(潭，深渊)
 
 
+網羅①もうら 网罗；收罗；包罗
+あらゆる事実を網羅する
+收罗所有的事实。
+
+この情報誌は国内の主な観光名所（めいしょ）をほぼ網羅している
+正解：(3)
+　解析：这本信息杂志几乎网罗了国内主要的有名观光场所。
+　(1)ぼうろう望楼(瞭望塔)　楼閣　空中くうちゅう　ろうかく
+　(2)もうろう朦朧(朦胧)
+　(3)もうら網羅(网罗)
+　(4)ぼうらく暴落((物价、行市等)暴跌。
+
+ 名誉①
+めいよ　
+名誉を勝ち得る　卡其爱噜
+赢得荣誉。
+
+4. 新商品の開発には多額の資金を費やした。
+残高　ざんたか　　多額の資金　たがくのしきん　調達　ちょうたつ　資金を調達する
+ひやす　冷やす(冰镇，使冷静)
+ついやす　費やす(花费，耗费)
 
 
+ゆいしょ由緒(渊源，历史来源)
+(3)ゆうしょう優勝(优胜)
+由緒正しい　正宗的  
+
+6. 若いスタッフたちが手際よく作業を進めていた。
+那些年轻的员工，熟练地进行着生产作业。
+　(1)しゅざい取材(采访)
+　(2)てきわ干扰项，不存在
+　(3)しゅさい主催(主办)
+　(4)てぎわ手際(手法，技巧，本领)
+手際 てぎわ　
+
+急遽 きゅうきょ 急忙，仓惶，匆忙
+急遽現場に駆けつける。 匆匆忙忙奔赴现场。
 
 
+４から一つ選びなさい。
+8. あの人は｢申請書は締め切りまでに絶対に提出した｣と、まだ  2.言い張って   いる
+1.言い残して
+2.言い張って
+3.言い渡して
+4.言い放って
+正解：(2)
+　解析：那个人到现在还坚持说“申请书绝对在截止日前就提交了”。
+　(1)言い残して(いいのこして)(没有说完；留言，遗嘱)
+　(2)言い張って(いいはって)(坚决主张，固执已见，坚持说)
+　(3)言い渡して(いいわたして)(命令，吩咐；宣告，宣判)
+　(4)言い放って(いいはなって)(断言，ーロ咬定；直言不讳)
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+このままでは交渉がまとまらないので、互いに    2.妥協       せざるをえない。
+1.同調
+2.妥協
+3.和解
+4.融合
+正解：(2)
+　解析：照这样的话是无法交渉成功的，所以只能互相都妥协一歩了。
+纏まる⓪まとまる　解决，妥，谈妥　
+交渉はまとまらなかった。　谈判没达成协议。
+相談がまとまった。　　商量妥当了。
+　(1)同調(どうちょう)　同意　どうい　(步调一致，赞同附和别人的意见和行动；调音)
+　(2)妥協(だきょう)　だきょう　(妥协，当事人互相让步，达成协议)
+　(3)和解(わかい)　　解決　かいけつ　回答　　　(和好，　和解「和解する」)
+　(4)融合(ゆうごう)(融合「団体が融合する」)
 
 
 
