--- a/111.md
+++ b/111.md
@@ -6,9 +6,9 @@
 　はんしょう反照(反照，反光)
 　はんじょう繁盛(繁荣，兴旺)
 
-
 せいやく制約(限制，制约)
 けいやく契約(契约)
+
 こうやく公約(公约，诺言)
 ようやく要約(要点，概要)
 
@@ -1146,37 +1146,147 @@ Merit.利点。長所。
 
 
 
+10. この論文が今後の医学の発展に     1.寄与     するところは大きいだろう。
+1.寄与
+2.普及
+3.供与
+4.波及
+　正解：(1)
+　解析：这篇论文大概能为今后医学的发展做出相当大的贡献吧。
+　(1)寄与(きよ)(贡献，有助于，「社会に寄与する」)
+　(2)普及(ふきゅう)(普及「標準語の普及」)
+　(3)供与(きょうよ)(提供，供给「生活費を供与する」)
+　(4)波及(はきゅう)(波及，影响「影響が世界に波及する」)
+
+11. 今年の花火大会は、30万人を超える     4.人出       が予想されている。
+1.人込み
+2.人波
+3.人通り
+4.人出
+　正解：(4)
+　解析：预测今年的烟火大会，预计外出(观看)的人会超过30万人。
+　(1)人込み(ひとごみ)(人群，人山人海「大変な人込みだ」)
+　(2)人波(ひとなみ)(潮水般的人群，人潮)
+　(3)人通り(ひとどおり)(人来人往，通行「人通りがなくなる」)
+　(4)人出(ひとで)(外出的人群)
 
 
+ 仕事の分担を決める前に、必要な作業をすべて                した。
+1.リストアップ
+2.エントリー　
+3.ストック
+4.コーディネート
+5.コントラスト
+
+正解：(1)
+　解析：在决定工作分配之前，先把需要做的事情都列出来。
+　(1)リストアップ(listup,列表，列出)
+　(2)エントリー(entry,申请参加，报名参加)嗯脱力 
+　(3)ストック(stock,储存，库存 滑雪杖 股票)  撕脱裤 
+　(4)コーディネート(coordinate,同等，并列，协调化)  扩地net
+ （5）コントラスト contrast对比，对照 
+
+4. 商品の原価が上がったが、販売価格への影響は当面ないだろう。
+　当面：当前，目前；面临
+　(1)しばらくは：暂时，不久
+　(2)直接は：直接
+　(3)まさか：(后接否定)怎能，决不；难道
+　(4)大して：(后接否定)并不怎么，并不那么
+
+３・４から一つ選びなさい。
+15. 今回の開発計画は、これまでのものとはスケールが違う。 scale 
+1.方針
+2.規模
+3.目的
+4.意義
+正解：(2)
+　解析：这回的开发计划，和迄今为止的其他计划的规模不同。
+　スケール：規模；大小；尺寸
+　(1)方針：方针
+　(2)規模：规模
+　(3)目的：目的，目标
+　(4)意義：意思；价值
+
+ 友人はしきりにうなずきながら話を聞いていた。
+1.小さく
+2.時々
+3.大きく
+4.何度も
+　正解：(4)しきりに  頻りに　　吸气理你  无那之裤 
+ 頻りにうなずく。
+频频点头。
+　解析：朋友边听边一个劲儿的点头。
+　しきりに：再三，屡次
+　(1)小さく：小的，轻微的
+　(2)時々：有时，偶尔
+　(3)大きく：(程度)大的，厉害的
+　(4)何度も：多次，屡次；几次
 
 
+20. 広大
+1.今回の金融危機は世界経済に莫大(ばくだい)な打撃を与えた。
+2.緑が多い広大なキャンパスは、この大学の魅力のひとつです。
+3.円高の影響は、ますます多様(たよう)な業種に及んでいる。
+4.A社は再開発地区に広大なビルの建設を予定している。
+正解：(2)
+　解析：広大(こうだい)：广大，宏大
+　(1)应该用：莫大(ばくだい)：莫大，极大，非常多
+　(2)绿意盎然的广阔的校园是这所大学的魅力之一。
+　(3)应该用：多様(たよう)：多种多样，各式各样
+　(4)应该用：巨大(きょだい)：巨大
+絶大な声援　セイエン　を受ける　
 
+秘める
+1.あの人はクールに見えるが、実は情熱を内に秘めている。
+2.来月転職することは会社のみんなにはまだ秘めている。
+3.彼が授業中に変な顔をしたので、笑いを秘めるのが大変だった。
+4.チームで仕事をする上では、多少の不満は秘める必要もある。
+正解：(1)
+　解析：秘(ひ)める：隐藏，隐秘
+　(1)那个人看上去很冷酷，其实内心很有热情。
+　(2)应该用：隠して(かくして)：隐藏，隐瞒，掩饰，躲藏
+　(3)应该用：抑える(おさえる)：压住，控制，抑制
+　(4)应该用：我慢する(がまんする)：忍耐，忍受，抑制
+ 
 
+23. 仕業
+1.店のシャッター（卷帘门　快门）のいたずら書きは、近所に住む子供の仕業だった。
+2.この公園にはいつもきれいな花が植えてあるけど、誰の行いなんだろう。
+3.まだ仕事に慣れていないんだから、彼の仕振りを責めてもしかたがない。
+4.おぼれている子どもを見つけたときの林さんの仕振りは、本当に立派だった。
+　正解：(1)　悪戯書き　いたずらがき　一踏兹拉嘎qi
+　解析：仕業(しわざ)：勾当，做的事情，主要指不好的行为
+　(1)商店卷帘门上的涂鸦是附近孩子们所画的。
+　(2)应该用：行い(おこない)：行为，行动，品行，举止
+　(3)应该用：しぶり：做法，想法。
+                   例：仕事の仕振りが良い。工作的做法很好。
+　(4)应该用：行動(こうどう)：行动，行为
 
+24. 無造作
+1.専門店でしか買えなかった商品が、最近はどこでも無造作に買える
+2.あの人は料理の味に無造作で、食べられれば何でもいいらしい。
+3.彼女はおしゃれにはあまり興味がないようで、髪も無造作に束ねているだけだ。
+4.高級レストランにしては雰囲気が無造作で、初めての人でも入りやすい。
+正解：(3)
+　解析：無造作(むぞうさ)：简单，不费事
+　(1)应该用：気軽に(きがるに)：轻松愉快，舒畅
+　(2)应该用：拘（こだわ）らなく：不拘泥于，无所谓
+　(3)她似乎对打扮没什么兴趣，头发也只是随便扎着。
+　(4)应该用：カジュアル：简便，轻便
 
+25. 総じて
+1.わかりやすい説明だったので、大体理解できました。
+2.私は子どものころからずっと眼鏡をかけています。
+3.今年は、各店舗の売り上げが総じて伸びている。
+4.昨日のセミナーの参加者は、合計２００名だった。
+正解：(3)
+　解析：総(そう)じて：总的说来，总而言之
+　(1)应该用：大体(だいたい)：大部分，大概，大略；总的来说
+　(2)应该用：ずっと：一直，始終；远比，更
+　(3)今年各个店铺的销售额总体来说都有所提高。
+　(4)应该用：合計　ごうけい　(昨天研讨会的参加者，总计是(2)00名。)
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+# 2013 07  1-4 
 
 
 
