--- a/111.md
+++ b/111.md
@@ -1288,5 +1288,180 @@ Merit.利点。長所。
 
 # 2013 07  1-4 
 
+こうみょう　巧妙　　光明
+跡地　あとち　
+
+したたか(強か)：厉害，強烈;好多
+　(2)ひそか(密か)：秘密，暗中
+　(3)すみやか(速やか)：快，迅速；及时
+　(4)おろか(愚か)：愚蠢，糊涂。
+
+　(1)こうしょう(交渉)：交涉
+　(2)こうみょう(巧妙)：巧妙
+　(3)きみょう(奇妙)：奇妙
+　(4)きしょう(稀少)：稀少，稀罕
+
+ (1)うるおい(潤い)：湿润
+　(2)つどい(集い)：集会
+　(3)にぎわい(賑わい)：热闹，繁华
+　(4)いこい(憩い)：休息
+
+1)しゅよう(主要)：主要　
+　(2)じゅうよう(重要)：重要
+　(3)じゅよう(需要)：需要
+　(4)しゅうよう(収容)：收容，容纳
+
+(1)積み立てる：积存;积累
+　(2)引き落とす：拽掉，拉倒；划账，扣款
+　(3)立て替える：垫付；代付
+　(4)差し引く：扣除，减去；抵补，相抵
 
 
+　(1)ひたむきに(直向に)：一个劲儿的，一心的(热衷于一件事儿不管其他)
+　(2)むしょうに(無性に)：很，非常，特別
+　(3)かたくなに(頑なに)：顽固
+　(4)いちずに(一途に)：专心；一味(追求一件事儿而不顾其他)
+
+  (1)からっと：晴朗，干爽
+　(2)しっとり：湿润；沉静
+　(3)じめじめ：潮湿，郁闷
+　(4)がさがさ：干燥，粗糙；沙沙声
+
+早急⓪
+さっきゅう 紧急，尽快，火急火速赶忙地
+早急な措置をとる。
+采取紧急措施。
+
+21. 優位
+1.Ａ社はこの数年、小型パソコン市場において他社より優位に立っている。
+2.今度のスポーツ大会では優位に入賞できるように毎日練習に励んでいる。
+3.ご予約のお客さまを優位にお席にご案内しておりますので、少々お待ちください。
+4.当社は、生産性より品質を優位に考えた生産体制に転換を進めています。
+正解：(1)
+　解析：優位(ゆうい)：优越地位；优势
+　(1)A公司这些年在小型笔记本电脑市场上比其他公司占有优势地位。
+　(2)应该用：上位(じょうい)：上位，更高位。
+　(3)应该用：優先(ゆうせん)：优于。
+　(4)应该用：優先(ゆうせん)：优于。
+
+22. かばう
+1.仕事のストレスから身をかばうには、適度な休養も必要だ。
+2.このマンションは、警備員が入り口で住人をかばっているので安心だ。
+3.政府は子どもたちの人権をかばう法律を成立させた。
+4.父にしかられていたら、母が「わざとやったわけじゃないんだから」と言ってかばってくれた。
+正解：(4)
+　解析：かばう(庇う)：袒护，庇护(保护别人远离危险或指责)
+　(1)应该用：守(まも)る：恪守，遵守；守护，守备。
+　(2)应该用：守(まも)って：恪守，遵守；守护，守备。
+　(3)应该用：守(まも)る：恪守，遵守；守护，守备。
+　(4)毎次被父亲责备时，妈妈总是袒护我说“又不是故意做的”。
+
+24. 気配
+1.私は目や口のあたりに祖母の気配があるとよく言われる。
+2.彼女が部屋に入ってくると、その場の気配がぱっと明るくなった。
+3.会議の開始時間を過ぎているのに、誰も来る気配がない
+4.駅前にビルや店ができて、10年前とは気配がすっかり変わった。
+　正解：(3)
+　解析：気配(けはい)：情形，迹象
+　(1)应该用：面影(おもかげ)：影，模样儿，历历浮在眼前的(呈现在脑海里)的面容、身影；风貌，面貌。
+　(2)应该用：雰囲気(ふんいき)：氛围，现场酿出的气氛。
+　(3)已经过了开会的开始时间了，但却没有人来的迹象。
+　(4)应该用：雰囲気(ふんいき)：氛围，现场酿出的气氛。
+
+25. 合致
+1.この靴は私の足の形に合致していて、疲れにくい。
+2.私は年齢に合致した服装をするように心がけている。
+3.実験結果は、理論的な予測に完全に合致していた。
+4.自分に合致する仕事なんて、そう簡単には見つからない。
+　正解：(3)
+　解析：合致(がっち)：一致；吻合(多指抽象)
+　(1)应该用：ぴったり：恰好，合适，相称
+　(2)应该用：合った(あった)：合适，相配；协调
+　(3)实验结果和理论预测的完全一致。
+　(4)应该用：合う(あう)：合适，相配；协调
+
+
+
+
+# 2013 12  1-4 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
