--- a/111.md
+++ b/111.md
@@ -1384,42 +1384,192 @@ Merit.利点。長所。
 
 
 # 2013 12  1-4 
+　(1)いよいよ：越来越，终于；确实；紧要关头
+　(2)まさしく：的确；确实
+　(3)いっそう：更加，更进一歩
+　(4)とりわけ：特别，尤其，格外
+
+
+  (1)ぐらぐら：摇摇晃晃；水等烧得滚开的样子
+　(2)そわそわ：慌慌张张，心神不宁的样子
+　(3)ぶらぶら：摇晃，摇动；闲逛，溜达；无所事事
+　(4)めそめそ：低头抽泣状；动不动就哭
+
+6. この30年で、この国の貧富の差は縮まってきている。
+解析：在这30年中，这个国家的贫富差距渐渐縮小了。
+　(2)ひんぷ(貧富)：贫富，穷人与富人　很普 
+
+7. 問題の再発防止のために、何度も会議を開いて対策を    3.練った       。
+正解：(3)
+　解析：为了防止问题的再次发生，多次召开会议推敲了対策。
+　(1)培う(つちかう)：栽培，培育：养成，培养
+　(2)築く(きずく)：修建，修筑：攒下，积累：确立
+　(3)練る(ねる)：推敲，努力使诗文或计划的内容与表达更完美
+
+8. 私はスポーツなら何でも好きだが、    4.とりわけ      サッカーが大好きだ。
+1.いよいよ
+2.まさしく
+3.いっそう
+4.とりわけ
+正解：(4)
+　解析：体育项目不管什么我都很喜欢，特别是足球
+　(1)いよいよ：越来越，终于；确实；紧要关头 愈々　益々　
+　(2)まさしく：的确；确实　正しく
+　(3)いっそう：更加，更进一歩　一層　
+　(4)とりわけ：特别，尤其，格外　取り分け
+
+当時①とうじ
+当時もいまと同様。
+那时也和现在一样。
+9. 職場の環境に満足していたので、その当時は転職など全く      念頭        になかった。
+1.念頭
+2.本心
+3.念願
+4.内心
+正解：(1)
+　解析：因为对工作环境很满意，当时完全没有想过换工作
+　(1)念頭(ねんとう)：念头，心思；念頭にない:没想过
+　(2)本心(ほんしん)：淸醒的头脑；认真；真心
+　(3)念願(ねんがん)：愿望
+　(4)内心(ないしん)：内心，在心中，暗地里
+
+
+10. 妹は今日が初めてのデートらしく、朝から    そわそわ       して落ち着かない様子だ。
+1.ぐらぐら
+2.そわそわ
+3.ぶらぶら
+4.めそめそ
+正解：(2)
+　解析：妹妹今天好像是第一次约会，从早上开始就心神不宁，坐立不安的样子。
+　(1)ぐらぐら：摇摇晃晃；水等烧得滚开的样子
+　(2)そわそわ：慌慌张张，心神不宁的样子
+　(3)ぶらぶら：摇晃，摇动；闲逛，溜达；无所事事
+　(4)めそめそ：低头抽泣状；动不动就哭
+
+
+11. 社長は、会社の将来を                人材の育成いくせいに力を入れている。
+1.になう
+2.いたわる
+3.やしなう
+4.かかげる
+正解：(1)
+　解析：社长在培养担负公司未来的人才上下了功夫
+　(1)になう(担う)：承担
+　(2)いたわる(労る)：体贴，安慰；怜悯，同情　一他挖路
+　(3)やしなう(養う)：养育，培养 压西那屋
+　(4)かかげる(掲げる)：悬挂；刊登；张贴；提
+
+　(1)そぶり(素振り)：态度，举止；样子
+　(2)しわざ(仕業)：行为，勾当(一般指不好的事情)
+　(3)腕前(うでまえ)：本事，才能，才干　腕前を披露する　披露宴　ひろうえん
+　(4)手前(てまえ)：跟前儿　
+
+13. 自分の考えに自信がなくて発言するのを    2.ためらって           いるうちに、議論が先に進んでしまった。
+1.遠ざけて
+2.ためらって
+3.案じて
+4.よけて
+　正解：(2)
+　解析：对自己的想法没有信心，正犹豫要不要发言的时候，讨论已经进行到下一歩了。
+　(1)遠ざける(とおざける)：使之远离，疏远，不让近其身
+　(2)ためらう(躊躇う)：踌躇，犹豫
+　(3)案じる(あんじる)：思考，担心
+　(4)よける(避ける)：躲开，避开
+
+14. 彼の予測はことごとく外れた。
+1.すべて
+
+16. 台風発生のメカニズムについて説明した。
+1.可能性
+2.きっかけ
+3.危険性
+4.しくみ
+　正解：(4)
+　解析：对台风发生的原理进行了说明。
+　メカニズム：原理，组织，机构　mechanism机械装置，装置
+　(1)可能性：可能性
+　(2)きっかけ：契机
+　(3)危険性：危险性
+　(4)しくみ　仕組み：构成，原理
+
+
+18. もう彼に本当のことを伝えるすべがない.
+1.必要
+2.時間
+3.方法
+4.理由
+正解：(3)
+　解析：现在已经，没有办法告诉他真相了。
+　すべ(術)：方法，手段
+　(1)必要：必要
+　(2)時間：时间
+　(3)方法：方法
+　(4)理由：理由
 
 
 
+20. 処置
+1.あした上司に報告できるように、今日中に書類を処理（しょり）しておこう。
+2.来月引っ越すので、使わない家具を全部処分しょぶんしようと思う。
+3.数学は苦手だったが、先生の特別な講義方法　でよく分かるようになった。
+4.医者の適切な処置のおかげで、痛みはすぐに治まった。
+　正解：(4)
+　解析：処置(しょち)：处理，按手续处理；医疗处理，对伤病进行治疗，处理等
+　(1)应该用：「処理」(しょり)：处罝，解决问题
+　(2)应该用：「処分」(しょぶん)：处理，处分，处罚
+　(3)应该用：「講義方法」(こうぎほうほう)：讲义，讲解；方法
+　(4)因为医生正确的处理，伤病迅速治好了
 
 
 
+21. 拍子
+1.重いものを入れすぎて、持ち上げた拍子ひょうしに紙袋が破れてしまった。
+2.昨日はとても疲れていたので、布団に入った途端に眠ってしまった。
+3.晩ご飯を作ったつぃでに、あしたのお弁当も作った。
+4.雨がやんだうちにに出かけたので、濡れずに済んだ。
+正解：(1)
+　解析：拍子(ひょうし)：刚一…时候；正当做某事的时候；音乐拍子
+　(1)因为重的东西放得太多了，刚要拿起纸袋子来的时候，它就破了
+　(2)应该用：「~たとたん」：刚……，刹那
+　(3)应该用：「ついで」：顺便，顺道
+　(4)应该用：「うちに」：在……之内，趁着……时
+
+
+22. 口出し
+1.今の意見に反論のある人は遠慮せず自由に口出ししてください。
+2.店長は客に上手に口出しして、客の好みをうまく聞き出した。　持ち掛ける　
+3.この会社に就職できたのは、山田さんが口出ししてくれたからだ。
+4.上司だからといって　部下の私生活にまで　口出しするのはよくない。
+正解：(4)
+　解析：口出し(くちだし)：插嘴，插话，干预
+　(1)应该用：「言う」(いう)：说话，讲话
+　(2)应该用：「もちかける」:开口，说起，提出，提供
+　(3)应该用：「推薦」(すいせん)：推荐；介绍　
+　(4)虽说是上司，连部下的私生活都插嘴是不好的
+
+いろいろな書類を書き、いくつもの窓口に持っていくなど.手続きが煩雑だった
+煩雑　はんざつ　
+
+
+3.少数の事例を一般化して社会全体に当てはめて考えてもいいものだろうか。
+ 　解析：当(あ)てはめる：适用，应用。
+　使用 套用 
+
+25. 打開
+1.これまでの古い習慣を変えて新しいやり方を取り入れてみよう。
+2.高木刑事は綿密な捜査を怠らず、数々の事件を解決してきた。
+3.彼は超難関と言われる試験を乗り換えし、希望の職に就くことができた。
+4.わが社の危機的状況を打開するためには、抜本（ばっぽん）的な経営の見直しが不可欠（ふかけつ）だ。
+正解：(4)
+　解析：打開(だかい)：打破僵局，找到解决的办法
+　(1)应该用：「変える」(かえる)：变，改变
+　(2)应该用：「解決」(かいけつ)：解决
+　(3)应该用：「乗り越える」(のりこえる)：克服，战胜(困难)
+　(4)为了解决我们公司的危机，必须从根本上对经营进行重新审视
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+# 2014 07 1- 4 
 
 
 
