--- a/111.md
+++ b/111.md
@@ -1571,45 +1571,235 @@ Merit.利点。長所。
 
 # 2014 07 1- 4 
 
+躍進　やくしん
+第5位から第1位に躍進する。
+　(1)やくしん(躍進)：跃进，飞跃的发展
+　(2)ようしん(養親)：养父母
+　(3)たくしん(宅診)：门诊，医生在自己家里给病人看病
+　(4)とうしん(灯心)：油灯的灯芯
+
+　(1)しっこう(執行)：执行、举行 
+　(2)すいこう(遂行)：完成、贯彻　躍進を遂げる　とげる　取得飞跃发展
+　(4)しつぎょう(失業)：失业、待业
+凝縮⓪
+ぎょうしゅく　凝缩，凝聚，分散的物资凝固，收缩成块儿
+皆の気持ちを一つの言葉に凝縮させる。
+大家的心情凝聚成一句话。
+
+4. どの親もわが子が健やかに育つことを願っている。
+1.しとやか
+2.おだやか
+3.すこやか
+4.さわやか
+正解：(3)
+　解析：不管哪个父母都希望自己的孩子健康成长。
+　(1)しとやか(淑やか)：端庄、贤淑　　洗脱牙卡 端庄 
+　(2)おだやか(穏やか)：稳妥、恬静、安祥  偶大牙卡  稳妥 
+　(3)すこやか(健やか)：健康、健全 死阔牙卡
+　(4)さわやか(爽やか)：清爽、爽朗 
+
+中枢　ちゅうすう　　運動中枢　うんどうちゅうすう　
+　(1)ちゅうかく(中核)：核心、骨干　　
+　(2)ちゅうすう(中枢)：中枢、枢纽、关键
+　(3)ちゅうしゅう(中秋)：中秋节  　
+　(4)ちゅうきゃく(注脚)：注脚　注釈　ちゅうしゃく　
+
+介護制度の整備が遅れているという事実は否めないだろう。
+1.いなめない
+2.ひめない
+3.こばめない
+4.ゆがめない
+正解：(1)
+　解析：看护制度的整顿进行的太迟了，我不否认这个事实。
+　(1)いなめない(否めない)：无法否定
+　(2)ひめない(秘めない)　　秘める　ひめる　：不隐瞒、不隐藏
+　(3)こばめない(拒めない)　拒む　こばむ：不拒绝、不阻止
+谁都无法否定的事实。
+　(4)ゆがめない(歪めない)　歪む　ゆがむ　：不歪曲、不曲解　
+
+7. 雨の降らない日がこれ以上続けば、農業に影響するだけでなく、日常生活にも      3.支障        を来すおそれがある。
+1.苦境  　くきょう
+2.不況  　ふきょう
+3.支障　　ししょう　嬉笑
+4.停滞　　ていたい　忒太
+　正解：(3)
+　解析：如果这种不下雨的日子再持续下去的话，不仅仅会影响到农业，恐怕也会给我们的生活带来妨碍的。
+　(1)苦境：艰苦的境遇，困难的立场，困境，窘境。
+　(2)不況：不景气，萧条。
+　(3)支障：故障；障碍，妨碍。
+　(4)停滞：停滞，停顿。
+
+目まぐるしい：瞬息万变，眼花缭乱，目不暇接。
+
+10. 話し合いは平行線を      2.たどり        、結局一致点を見いだせなかった。
+1.あゆみ
+2.たどり
+3.なぞり
+4.つたい
+　正解：(2)
+　解析：谈判走平行线，结果没能找到一致点。
+　平行線をたどる：两件事物始終处于对立状态。
+　(1)あゆみ：前进，进展，经历过
+　(2)たどり：追寻，追溯，探索。
+　(3)なぞり ：描，描摹。
+　(4)つたい：顺，沿。攀。
+
+弊社の採用試験では、筆記試験よりも面接に         1.ウェイト      を置いています。
+1.ウェイト
+2.トップ
+3.パワー
+4.メイン
+正解：(1)
+　解析：我们公司的录取考试，比起笔试，重点更偏重于面试。
+　ウェイトを置く：更重视，重点。
+　(1)ウェイト：重量。体重。；重点。重要性。
+　(2)トップ：最高层，最高级；最前头，首位。
+　(3)パワー：力量，权力，势力。
+　(4)メイン：主要的，主的。
+
+12. 当選した林氏は取材に対して、今回の選挙は終盤まで    4.予断       を許さない厳しい戦いだったと語った。
+1.予期
+2.見通し
+3.見込み
+4.予断
+正解：(4)
+　解析：当选的林先生在采访时说，这次的选举是不到最后都无法判断的激烈的战斗。
+　(1)予期：预期，预料，预想。
+　(2)見通し：预料，预见；看穿，看透，洞察。
+　(3)見込み：预料，估计，预定；希望；可能性。
+　(4)予断：预先判断，预测　予断を許さない　不可预测的
+
+13. 田中さんはいつも手際よく    3.てきぱきと        仕事を進めている。
+1.めきめきと
+2.さらさらと
+3.てきぱきと
+4.すくすくと
+正解：(3)
+　解析：田中处理事务的手法(技巧)很好，总是能够爽快利落的将工作推行下去。
+　(1)めきめきと：显著，迅速。
+　(2)さらさらと：流利地。(写字画画一挥而就)     树叶沙沙的声音，小溪哗哗的声音。  头发清爽，积雪，土壤松散的意思
+　(3)てきぱきと：麻利，爽快，敏捷，利落，利索，干脆。
+てきぱき　铁ki怕ki 麻利，爽快，敏捷，利落，利索，干脆
+処理や対応がはっきりしていて、歯切れ（はぎれ）のよいさま。
+やり方がてきぱきしている。干得利落。
+　(4)すくすくと：(长得)很快，茁壮成长
+
+
+15. 最近、山本さんは新しい仕事に**打ち込ん**でいるらしい。
+1.興味を持っている
+2.しつこく誘われている
+3.時間をとられている
+4.熱心に取り組んでいる
+　正解：(4)
+　解析：最近，山本似乎热衷于新工作。
+　打ち込む：热衷，专心致志
+　(1)興味を持っている：有兴趣
+　(2)しつこく誘われている：执着地被邀请着
+　(3)時間をとられている：被占用了时间
+　(4)熱心に取り込んでいる：热衷于做某事
+
+ストレート　straight 直接　
+
+17. 駅前に巨大スーパーができたらお手上げだ。
+1.大歓迎だ
+2.どうしようもない
+3.ぜひ働きたい
+4.驚きだ
+　正解：(2)
+　解析：如果车站前建了一个大型的超市就毫无办法了。
+　お手上げ：束手无策，毫无办法
+　(1)大歓迎：特別欢迎
+　(2)どうしようもない：没有办法
+　(3)ぜひ働きたい：一定想工作
+　(4)驚(おどろ)き：惊讶，吃惊
+あれとは格段 の相違がある。 格段　かくだん　
+与那个有显著的不同。
+
+19. 操作方法はいたって簡単でした。
+1.わりに
+2.意外に
+3.非常に
+4.たしかに
+　正解：(3)
+　解析：操作方法很简单。
+　いたって：很，最
+　(1)わりに　割に：格外，出乎意料
+　(2)意外に：意外，出乎意料
+　(3)非常に：很，非常
+　(4)たしかに：确实
+
+
+20. 一律
+1.山下さんは、会うと一律に赤い帽子をかぶっている。
+2.休みの日に出かけようとすると、きまってに雨が降る。
+3.うちの会社の社員は、経歴はさまざまだが、全部に留学経験者だ。
+4.すべての経費を一律に削減するのではなく、無駄なものから減らせばよい。
+正解：(4)
+　解析：一律(いちりつ)：一律(哪一个都一样，没有变化，没有例外)
+　(1)应该用：いつも：经常，总是
+　(2)应该用：きまって：一定，经常
+忙しいときに決まって人が来る。
+忙碌的时候经常来人。
+　(3)应该用：全部(ぜんぶ)で：全部，所有
+　(4)不要一律削减经费，只要减少不必要的浪费即可。
+
+21. はがす
+1.木村さんはノートに地図を書くと、そのページをはがして私にくれた。
+2.ジャムを作るとき、りんごは皮をはがして、小さく切ってください。
+3.友人へのプレゼントにするので、値段のシールをはがしておいた。
+4.目が疲れるので、家に帰るとすぐコンタクトレンズをはがす。
+正解：(3)
+　解析：剥がす(はがす)：剥下，揭下。
+　(1)应该用：千切る(ちぎる)：切碎，捏碎
+　(2)应该用：剥く(むく)：剥开，揭开
+　(3)因为是送给朋友的礼物，所以事先把价格的标签扯了下来。
+　(4)应该用：外す(はずす)：卸下，拆下
+
+
+22. 心構え
+1.金銭トラブルに遭わないようにするには、日ごろの注意が大切だ。
+2.上司から海外赴任を打診されたが、なかなか心構えが決まらない。
+3.今年中に家を買って引っ越すつもりだったのに、まだいい物件が見つからない。
+4.石川さんがこんなに親切にしてくれるのは、何か頼みごとがあるんじゃないだろうか。
+正解：(2)
+　解析：心構え(こころがまえ)：思想准备。
+　(1)应该用：注意(ちゅうい)：注意，留心
+　(2)上司向我试探了海外调任的事，但是我怎么也无法下定决心。
+　(3)应该用：つもり：预计，打算
+　(4)应该用：頼みごと(たのみごと)：拜托的事情
+
+
+23. 損なう
+1.増税によって景気が損なわれることを心配する人が多い。
+2.度重なる発送ミスなどがもとで、顧客との信頼関係を損なってしまった。
+3.仕事に失敗して自信を損なっていたとき、この本を読んだら元気が出ました。
+4.天気予報によると、今週末は天候が損なわれるそうだ。
+　正解：(2)
+　解析：損なう(そこなう)：损坏，伤害。
+　(1)应该用：下向く(したむく)•朝下，向下
+　(2)由于多次的送货失误，损害了客户的信赖关系。
+　(3)应该用：失くして(なくして)：弄丢，弄没
+　(4)应该用：崩れる(くずれる)：崩溃，崩塌，变坏
+
+
+しがみつく　用力的抓住
+
+
+25. 工面
+1.制度の改正を求めて、街頭で署名を工面する活動を続けた。
+2.サービス向上のために、利用者からアイディアを工面した。
+3.選挙が近くなり、各政党は候補者を工面するのに必死だ。
+4.なんとか資金を工面して、ついに自分の店を持つことができた。
+正解：(4)
+　解析：工面(くめん)：筹措(钱款)，筹划。
+　(1)应该用：収集(しゅうしゅう)：收集，收集品
+　(2)应该用：収集(しゅうしゅう)：收集，收集品
+　(3)应该用：支援(しえん)：支援，出力帮助
+　(4)想尽办法筹措钱款，终于拥有了自己的店。
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+# 2014 12 1-4 
 
 
 
