--- a/111.md
+++ b/111.md
@@ -638,7 +638,7 @@
 6. ようやく景気回復の兆しが見えてきた。
 しるし印(记号，标记)
 　(2)あかし証(证据)
-　(3)きざし兆し(兆头，预兆)
+　(3)きざし兆し(兆头，预兆) 给杂戏
 　(4)ひざし日差し(阳光)
 
 . 大学をやめると言ったら、母に         猛       反対された。
@@ -811,17 +811,6 @@
 　(3)可以不填。
 　(4)应该用：余地(よち)：余地，宽裕；剩余部分
 
-22. ゆとり
-1.参加者が多かったので、資料ののこりはあと１枚だけです。
-2.子どもが生まれてからは経済的にゆとりがなくなった。
-3.レポート提出まで、あと一日だけください。
-4.すでにかなり譲歩したので、これ以上交渉の余地はない。
-　正解：(2)
-　解析：ゆとり：宽裕。舒畅。绰绰有余
-　(1)应该用：のこり：剩下，残余，剩余。
-　(2)孩子生下来后，经济上就没有那么充裕了。
-　(3)可以不填。
-　(4)应该用：余地(よち)：余地，宽裕；剩余部分
 
 
 配布
@@ -1114,8 +1103,6 @@ Merit.利点。長所。
 急遽 きゅうきょ 急忙，仓惶，匆忙
 急遽現場に駆けつける。 匆匆忙忙奔赴现场。
 
-
-４から一つ選びなさい。
 8. あの人は｢申請書は締め切りまでに絶対に提出した｣と、まだ  2.言い張って   いる
 1.言い残して
 2.言い張って
@@ -1193,7 +1180,6 @@ Merit.利点。長所。
 　(3)まさか：(后接否定)怎能，决不；难道
 　(4)大して：(后接否定)并不怎么，并不那么
 
-３・４から一つ選びなさい。
 15. 今回の開発計画は、これまでのものとはスケールが違う。 scale 
 1.方針
 2.規模
@@ -1222,7 +1208,6 @@ Merit.利点。長所。
 　(3)大きく：(程度)大的，厉害的
 　(4)何度も：多次，屡次；几次
 
-
 20. 広大
 1.今回の金融危機は世界経済に莫大(ばくだい)な打撃を与えた。
 2.緑が多い広大なキャンパスは、この大学の魅力のひとつです。
@@ -1247,7 +1232,7 @@ Merit.利点。長所。
 　(2)应该用：隠して(かくして)：隐藏，隐瞒，掩饰，躲藏
 　(3)应该用：抑える(おさえる)：压住，控制，抑制
 　(4)应该用：我慢する(がまんする)：忍耐，忍受，抑制
- 
+
 
 23. 仕業
 1.店のシャッター（卷帘门　快门）のいたずら書きは、近所に住む子供の仕業だった。
