--- a/111.md
+++ b/111.md
@@ -1783,8 +1783,65 @@ Merit.利点。長所。
 
 
 # 2014 12 1-4 
+　(1)絡(から)む：自五缠在……上。
+　(2)挑(いど)む：自五対抗，挑战。
+　(3)励(はげ)む：自五努力、刻苦。
+　(4)臨(のぞ)む：自五面对。
+
+
+ 　(1)催促(さいそく)：名、他サ催促。
+　 (2)督促(とくそく)：名、他サ督促。
+ 　(3)漂い(ただよい)：名飘荡、漂浮。
+   (4)げんせい(厳正)：名严正、严格。
+   (5)拒む(こばむ)：他五拒绝。
+
+15. 案の定、川西さんは来なかった。
+1.なぜか
+2.やはり
+3.あいにく
+4.たしか
+正解：(2)
+　解析：果然川西没有来。
+　(1)なぜか：副不知为何，不由得。
+　(2)やはり：副果然。
+　(3)あいにく：副不凑巧，偏巧。
+　(4)たしか：副确实，确切。
+
+2.問題が生じたら、一人で抱え込まず、上司や同僚に相談するといい。
+
+1. 裏腹
+1.あの双子は外見はそっくりだが、全く正反対の性格をしている。
+2.地図を見ると、商店街と住宅街は駅から反対の方角にあるようだ。
+3.前向きな言葉とは裏腹に課長の態度は消極的で、計画は一向に進まない。
+4.みんなが私を見るので変だと思ったら、セーターをあべこべに着ていた。
+正解：(3)
+　解析：裏腹(うらはら)名•形动相反。
+　(1)应该用：正反対(せいはんたい)：完全相反，正相反
+　(2)应该用：反対(はんたい)：相反，逆反，颠倒
+　(3)与那些积极的说法完全相反，课长的态度很消极，而且计划也没有任何进展。
+　(4)应该用：あべこべ：颠倒(的)，相反的。顺序位置等的颠倒。
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+   
 
  
