--- a/111.md
+++ b/111.md
@@ -1823,12 +1823,21 @@ Merit.利点。長所。
 
 # 2015 07 1-4
 
+　(2)しょうにん(承認)：名他サ批准；承认。
+　(4)しょうだく(承諾)：名他サ同意，承诺；允许。
+
+  (1)あさい(浅い)：形浅的
+　(2)はかない：形脆弱的，无常的
+　(3)あわい(淡い)：形浅的；淡的。
+　(4)きよい(清い)：形清洁的
+　(5)かくいつてき(画一的)：形动划一的，统一的，无变化的。
+
+ # 2015 12 1-4
 
 
 
 
-
-
+ 
 
 
 
