--- a/111.md
+++ b/111.md
@@ -1833,11 +1833,123 @@ Merit.利点。長所。
 　(5)かくいつてき(画一的)：形动划一的，统一的，无变化的。
 
  # 2015 12 1-4
+# 2016 07 1-4 
+
+2. 将来のために様々な知識を蓄えておきたい。
+1.たずさえて
+2.そなえて
+3.かかえて
+4.たくわえて
+　正解：(4)
+　解析：为了将来(的发展)想积累好各类知识。
+　(1)たずさえて(携えて)：携える。携帯，拿，带。
+　(2)そなえて(備えて)：備える。具备；具有；与生俱来；生来就有。
+　(3)かかえて(抱えて)：抱える。抱(在胸前)，夹(在腋下)。
+　(4)たくわえて(蓄えて)：蓄える。(知识，技能)积蓄，积累。
+　(35)いつわって(偽って)：偽る。说谎，歪曲；假装；冒充。
+
+5. 専門家に鑑定を依頼した。
+1.かんじょう
+2.かんてい
+3.けんてい
+4.けんじょう
+正解：(2)
+　解析：委托专家进行了鉴定。
+　(1)かんじょう(勘定)：数，计数，计算。
+　(2)かんてい(鑑定)：鉴别，判断。
+　(3)けんてい(検定)：审定，检查裁定，甄别。
+　(4)けんじょう(謙譲)：谦让，谦逊。
 
 
-
-
+7. 今回の事故から得た  教訓    をもとに、再発を防止するための対策を立てた。
+1.触発
+2.啓発
+3.教養
+4.教訓
+正解：(4)
+　解析：基于此次事故所得到的教训，制定了防止再度发生的对策。
+　(1)触発：触发；(受到)刺激，(引起)感情冲动。
+　(2)啓発：启发，启迪，启蒙。对人们没有意识到的事情或不足之处进行教诲并使明白。
+　(3)教養：教育；修养；教养；文化；学识；素养。
+　(4)教訓：教训。
+　(5)ニュアンス：法nuance细微的差别，微妙的感觉，语言、颜色、声音、调子和感情等的细微差别。
+　(1)展開：开展，展开，逐渐发展；展现，逐步扩展。
+　(2)発散：发散，散发，抒发，抒解；发射，发散，光线向四周扩散。
+　(3)流出：流出；外流。
+　(4)転向：改变方向、方针、兴趣、爱好；改变朝向；改变思想上、政治上的立场。
+　(1)遂げる：完成(任务)，达到(愿望)；最终达成(某种结果)。
+　(2)尽くす：尽力；报效，贡献力量；达到极点。最善を尽くす惯用句。竭尽全力
+　无论...都要竭尽全力的去努力
+　(3)果たす：完成；实现。
+　(4)極める：达到极限。
  
+(1)すっきり：流畅；通畅；纯净。；爽快；痛快；无烦心事，感觉舒畅的样子。
+　(2)からからに：嘎嗤嚷啦；形容男性高声大笑；形容空无一物；形容极其干燥。
+　(3)へとへとに：非常疲乏，精疲力竭，筋疲力尽。形容非常疲惫，身上一点力气也没有。
+　(4)ぎっしり：满满的。
+端的に：明白的，清楚的
+かろうじて:好不容易才…，勉勉强强…
+　(1)なぜか：不知为何，不由得
+　(2)何とか：勉強，好歹，总算
+
+自尊心：自尊心
+　(1)イメージ：印象
+　(2)コントロール：支配，统治，控制
+　(3)スタイル：风格，姿态，样式
+　(4)プライド：自尊心，自豪感
+
+ とまどって(戸惑って)：糊涂，困惑
+　(1)困って：困惑
+　(2)驚いて：吃惊
+　(3)怖がって：害怕
+　(4)悔やんで：后悔
+
+
+20. 規制
+1.光熱費を最小限に規制して、家計の負担を減らしている。
+2.今年は就職活動で忙しくなるので、アルバイトは規制するつもりだ。
+3.マラソン大会当日は交通が規制され、一部の道路が通行止めになる。
+4.この授業は少人数で行われるため、受講できる学生数が規制されている。
+正解：(3)
+　解析：規制(きせい)：限制，限定，规定(用规章加以限制)
+　(1)应该用:縮(ちぢ)める：缩短，縮小。
+　(2)应该用：とどめる：停止，中止。
+　(3)马拉松大会当日的交通被加以限制，一部分的道路禁止通行。
+　(4)应该用:制限(せいげん)：限制
+
+
+
+
+22. 素早い
+1.警察の素早い対応によって、逃走した犯人はその日のうちに逮捕された。
+2.窓を開けていたら強い風が吹いて、机の上の紙が素早く飛んでしまった。
+3.鈴木教授は話し方が素早いので、講義の内容が聞き取れないことがある。
+4.森氏の小説は人気があって、新しい作品が発売されると素早く売り切れてしまう。
+正解：(1)
+　解析：素早い(すばやい)：迅速，快速。(一件事情结束迅速开始另一件事情、动作或针对新形式，随机应变迅速转换头脑)
+　通过警察随机应变的处理，逃走的犯人那一天之内就被逮捕了。
+　(2)应该用:急(きゅう)に：突然间
+　(3)应该用：速い(はやい)：迅速的，快的：早的
+　(4)应该用：すぐ/たちまち：转眼间，立刻，突然
+
+4. 退く
+1.不規則な生活を退いてから、体調がよくなってきたと感じている。
+2.佐藤氏は社長の地位を退いた後も、会社への影響力を持ちつづけた。
+3.仕事が忙しい時期を退いたら、休暇を取って家族と旅行しようと思っている。
+4.A市の財政は一時の危機的状況を退いたが、いまだに厳しい運営が続いている。
+正解：(2)
+　解析：退く(しりぞく)：向后退；退出，离去(从什么身份，官职上隐退)；退一步想
+　(1)应该用:止めて 放弃，停止（某种状态）
+　(2)佐藤退去社长的职位后也一直持续对公司有影响力。
+　(3)应该用：終(お)える：完成，做完
+　(4)应该用:乗り越えた(のりこえた)：战胜，克服。
+
+
+
+
+# 2016 12 1-4
+
+
 
 
 
